[project]
name = "arctic3d"
license = "Apache-2.0"
version = "0.4.1"
description = "Automatic Retrieval and ClusTering of Interfaces in Complexes from 3D structural information"
authors = [{ name = "Marco Giulini" }]
maintainers = [{ name = "BonvinLab", email = "bonvinlab.support@uu.nl" }]
readme = "README.md"
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3.9",
  "Topic :: Scientific/Engineering :: Chemistry",
  "Topic :: Scientific/Engineering :: Bio-Informatics",
  "Intended Audience :: Science/Research",
]

dependencies = [
  "bio==1.6.2",
  "lxml==6.0.2",
  "mdanalysis==2.7.0",
  "requests==2.32.4",
  "biopython==1.85",
  "scipy==1.13.1",
  "matplotlib==3.9.4",
  "pdb-tools==2.5.0",
  "pandas==2.2.3",
  "openpyxl==3.1.5",
  "plotly==6.0.1",
  "pdbecif==1.5",
  "jsonpickle==4.1.0",
  "kaleido==0.2.1",
]

[project.optional-dependencies]
dev = [
  "pytest",
  "pytest-cov",
  "pytest-mock",
  "coverage",
  "hypothesis",
  "mypy",
  "types-requests",
]

[project.scripts]
arctic3d = "arctic3d.cli:maincli"
arctic3d-resclust = "arctic3d.cli_resclust:maincli"
arctic3d-localise = "arctic3d.cli_localise:maincli"
arctic3d-restraints = "arctic3d.cli_restraints:maincli"


[tool.pytest.ini_options]
pythonpath = "src"
markers = [
  "sanity: tests if the apis are working as expected",
  "integration: tests the integration of different components",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
